--- a/WpfApp1/views/DashboardPage.xaml
+++ b/WpfApp1/views/DashboardPage.xaml
@@ -8,12 +8,27 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DashboardPage">
+    <Page.Resources>
+        <Style x:Key="HoveredText" TargetType="{x:Type TextBlock}" >
+            <Style.Triggers>
+               
+                <Trigger Property="IsMouseOver" Value="True">
+                    
+                    <Setter Property="Background">
+                        <Setter.Value>
+                            <SolidColorBrush Color="White" Opacity="0.3"/>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Page.Resources>
     <ScrollViewer>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200" />
                 <ColumnDefinition Width="*"/>
-                
+
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0"  Background="#0072de" >
                 <Grid.RowDefinitions>
@@ -48,7 +63,7 @@
                         <RowDefinition Height="50" />
                         <RowDefinition Height="10" />
                         <RowDefinition Height="240" />
-                        
+
                     </Grid.RowDefinitions>
                     <TextBlock
                     VerticalAlignment="Center"
@@ -91,6 +106,7 @@
                         <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="1"
+                        Style="{StaticResource HoveredText}"
                         Padding="10">
                         
                          <iconPacks:PackIconMaterialLight 
@@ -103,6 +119,7 @@
                         <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="2"
+                        Style="{StaticResource HoveredText}"    
                         Padding="10">  
                          <iconPacks:PackIconMaterialLight 
                              Kind="CreditCard"
@@ -115,12 +132,12 @@
                         <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="3"
+                          Style="{StaticResource HoveredText}"    
                         Padding="10">
                         
                          <iconPacks:PackIconBootstrapIcons 
                              Kind="ClockHistory"
                              Foreground="White"
-                            
                              />
                         
                         <Run Text=" Hsitory" Foreground="White" FontSize="12" BaselineAlignment="Center" />
@@ -128,6 +145,7 @@
                         <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="4"
+                        Style="{StaticResource HoveredText}"    
                         Padding="10">
                         
                          <iconPacks:PackIconBootstrapIcons 
@@ -140,19 +158,18 @@
                         <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="5"
-                       
+                        Style="{StaticResource HoveredText}"
                         Padding="10">
                         
                          <iconPacks:PackIconBootstrapIcons 
                              Kind="People"
                              Foreground="White"
-                            
                              />
                         
                         <Run Text=" Visitors / User" Foreground="White" FontSize="12" BaselineAlignment="Center" />
                         </TextBlock>
                     </Grid>
-                   
+
                 </Grid>
                 <Grid Grid.Row="3" Margin="6 0 6 0" >
                     <Grid.RowDefinitions>
@@ -160,7 +177,7 @@
                         <RowDefinition Height="40" />
                         <RowDefinition Height="40" />
                         <RowDefinition Height="20" />
-                        
+
                     </Grid.RowDefinitions>
                     <TextBlock 
                         Height="50"
@@ -171,6 +188,7 @@
                     <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="1"
+                        Style="{StaticResource HoveredText}"
                         Padding="10">
                         
                          <iconPacks:PackIconFontAwesome 
@@ -183,6 +201,7 @@
                     <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="2"
+                        Style="{StaticResource HoveredText}"
                         Padding="10">
                         
                          <iconPacks:PackIconFontAwesome 
@@ -197,7 +216,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="20" />
                         <RowDefinition Height="40" />
-                       
+
                     </Grid.RowDefinitions>
                     <TextBlock 
                         Height="50"
@@ -208,7 +227,10 @@
                     <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="1"
-                        Padding="10">
+                        Padding="10"
+                        Style="{StaticResource HoveredText}"
+                      >
+                       
                         
                          <iconPacks:PackIconFontAwesome 
                              Kind="MoneyBillAltSolid"
@@ -217,7 +239,7 @@
                         
                         <Run Text=" Fees area" Foreground="White" FontSize="12" BaselineAlignment="Center" />
                     </TextBlock>
-                   
+
                 </Grid>
             </Grid>
             <Grid Grid.Column="1" >
@@ -227,5 +249,5 @@
 
         </Grid>
     </ScrollViewer>
-   
+
 </Page>
