Revert "home page link"
This reverts commit f3ef9c6a67d471225e6845973b741292c0bda987.

--- a/WpfApp1/views/DashboardPage.xaml
+++ b/WpfApp1/views/DashboardPage.xaml
@@ -80,7 +80,6 @@
                     Background="#1a459c"
                     Padding="10"
                     Grid.Row="0"
-                    MouseLeftButtonDown="TextBlock_MouseLeftButtonDown"
                     >
                     <Path Width="18"
                           VerticalAlignment="Center"
@@ -254,7 +253,7 @@
             </Grid>
             <Grid Grid.Column="1" >
                 <Frame Name="ContentFrame" Grid.Column="1" />
-             
+                <Label Content="ini konten"/>
             </Grid>
 
         </Grid>
