--- a/WpfApp1/views/DashboardPage.xaml
+++ b/WpfApp1/views/DashboardPage.xaml
@@ -10,10 +10,11 @@
       Title="DashboardPage">
     <Page.Resources>
         <Style x:Key="HoveredText" TargetType="{x:Type TextBlock}" >
+            
             <Style.Triggers>
                
                 <Trigger Property="IsMouseOver" Value="True">
-                    
+                    <Setter Property="Cursor" Value="Hand" />
                     <Setter Property="Background">
                         <Setter.Value>
                             <SolidColorBrush Color="White" Opacity="0.3"/>
@@ -33,7 +34,7 @@
             <Setter Property="FontSize" Value="12"/>
         </Style>
     </Page.Resources>
-    <ScrollViewer>
+ 
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200" />
@@ -80,6 +81,7 @@
                     Background="#1a459c"
                     Padding="10"
                     Grid.Row="0"
+                    Cursor="Hand"
                     MouseLeftButtonUp="TextBlock_MouseLeftButtonUp"
                     >
                     <Path Width="18"
@@ -156,6 +158,7 @@
                         <TextBlock 
                         VerticalAlignment="Center"
                         Grid.Row="4"
+                        MouseLeftButtonUp="TextBlock_MouseLeftButtonUp_1"
                         Style="{StaticResource HoveredText}"    
                         Padding="10">
                         
@@ -258,6 +261,6 @@
             </Grid>
 
         </Grid>
-    </ScrollViewer>
+    
 
 </Page>
