--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1" 
         WindowStartupLocation="CenterScreen"
+        xmlns:vm="clr-namespace:WpfApp1.views"
         mc:Ignorable="d"
         Title="MainWindow" Height="700" Width="1300">
     <Grid>
