--- a/WpfApp1/views/ScannerMgm.xaml
+++ b/WpfApp1/views/ScannerMgm.xaml
@@ -60,6 +60,9 @@
                 <WindowsFormsHost Width="223" Height="74" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="257,0,0,0"  >
                     <wf:PictureBox x:Name="pictureBox3" SizeMode="AutoSize" BackColor="WhiteSmoke"  MouseDoubleClick="pictclicked" />
                 </WindowsFormsHost>
+                <TextBox x:Name="licenseP" HorizontalAlignment="Left" Height="23" Margin="0,117,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="178"/>
+                <Label Content="Input license plate number" HorizontalAlignment="Left" Margin="10,86,0,0" VerticalAlignment="Top"/>
+                <Button Content="Generate Qr code" Click="Button_Click" HorizontalAlignment="Left" Margin="0,152,0,0" VerticalAlignment="Top" Width="178" Height="23"/>
             </Grid>
 
         </Grid>
