--- a/WpfApp1/views/AreaViews.xaml
+++ b/WpfApp1/views/AreaViews.xaml
@@ -4,10 +4,74 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-      xmlns:local="clr-namespace:WpfApp1.views"
+   
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AreaViews">
+    <Page.Resources>
+        <Style TargetType="DataGrid">
+            <!-- Make the border and grid lines a little less imposing -->
+            <Setter Property="BorderBrush" Value="#DDDDDD" />
+            <Setter Property="HorizontalGridLinesBrush" Value="#DDDDDD" />
+            <Setter Property="VerticalGridLinesBrush" Value="#DDDDDD" />
+
+            <Setter Property="RowStyle">
+                <Setter.Value>
+                    <Style TargetType="DataGridRow">
+                        <Style.Triggers>
+                            <!-- Highlight a grid row as the mouse passes over -->
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="LightCyan" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="CellStyle">
+                <Setter.Value>
+                    <Style TargetType="DataGridCell">
+                        <Style.Triggers>
+                            <!-- Highlight selected rows -->
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="#ff66ccff" />
+                                <Setter Property="BorderBrush" Value="Transparent" />
+                                <Setter Property="Foreground" Value="Black" />
+                            </Trigger>
+                            <Trigger Property="IsFocused" Value="True">
+                                <Setter Property="Background" Value="#ff66ccff" />
+                                <Setter Property="BorderBrush" Value="Black" />
+                                <Setter Property="BorderThickness" Value="1"/>
+                                <Setter Property="Foreground" Value="Black" />
+                            </Trigger>
+                        </Style.Triggers>
+                        <!-- Add some padding around the contents of a cell -->
+                        <Setter Property="Padding" Value="4,3,4,3" />
+                        <Setter Property="BorderBrush" Value="Transparent"/>
+                        <Setter Property="BorderThickness" Value="1"/>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="DataGridCell">
+                                    <Border Padding="{TemplateBinding Padding}" 
+                                            BorderBrush="{TemplateBinding BorderBrush}"
+                                            BorderThickness="{TemplateBinding BorderThickness}"
+                                            Background="{TemplateBinding Background}">
+                                        <ContentPresenter />
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Property="FocusVisualStyle">
+                            <Setter.Value>
+                                <Style TargetType="Control">
+                                    <Setter Property="BorderBrush" Value="Transparent" />
+                                </Style>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
     <Grid Margin="5" >
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
@@ -74,32 +138,45 @@
             <iconPacks:PackIconMaterialLight Name="ikonb" Kind="AlertCircle" FontSize="15" Foreground="White" Margin="14,0,0,0" />
             <Run Text="Data berhasil disimpan" BaselineAlignment="Center" Foreground="White" />
         </TextBlock>
-       
-            <DataGrid x:Name="dgEmployee" 
+        
+
+        <DataGrid x:Name="dgAreas" 
                   Grid.Row="4"
-                      Grid.Column="1"
+                  Grid.Column="1"
                   AutoGenerateColumns="False"
                   IsReadOnly="True"
                   Margin="5,8,8,8"
                   ScrollViewer.CanContentScroll="True" 
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
-                  ItemsSource="{Binding Path=EmployeeList}"
+                  HeadersVisibility="Column"
+                  CanUserResizeColumns="False"
+                  ItemsSource="{Binding  Path=AreasList}" BorderBrush="{x:Null}"
+                  EnableRowVirtualization="False" 
+                  RowHeight="30" VerticalAlignment="Top" Background="{x:Null}"
+              
                   >
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="No" Width="60" />
-                    <DataGridTextColumn Header="Area Number" Width="150"/>
-                    <DataGridTextColumn Header="Area Kateogori" Width="130"  />
-                    <DataGridTextColumn Header="Salaray per hour" Width="200"  />
-                    
-                    <DataGridTemplateColumn Header="action" >
-                        <DataGridTemplateColumn.CellTemplate>
-                            <DataTemplate>
-                                <Button x:Name="btnEdit" Content="edit" />
-                            </DataTemplate>
-                        </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                </DataGrid.Columns>
-            </DataGrid>
-        
+           
+            <DataGrid.Columns>
+
+                <DataGridTextColumn Header="Area Number" Width="150"  Binding="{Binding Path=AreaNumber}" />
+                <DataGridTextColumn Header="Area Hall" Width="130"  Binding="{Binding Path=Kategori}"  />
+                <DataGridTextColumn Header="Salaray per hour" Width="200" Binding="{Binding Path=FessValue}"  />
+                <DataGridTextColumn Header="Created at" Width="auto" Binding="{Binding Path=CreatedAt}"  />
+                <DataGridTemplateColumn Width="100" >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button x:Name="btnEdit" Content="edit" Width="40" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Width="100" >
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button x:Name="btnDel" Content="hapus" Width="40" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Page>
