--- a/WpfApp1/views/AreaAddWindow.xaml
+++ b/WpfApp1/views/AreaAddWindow.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="WpfApp1.views.AreaEditModal"
+﻿<Window x:Class="WpfApp1.views.AreaAddWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1.views"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-       
-         xmlns:locvm="clr-namespace:WpfApp1.ViewModel"
+        xmlns:locvm="clr-namespace:WpfApp1.ViewModel"
         xmlns:locm="clr-namespace:WpfApp1.Models"
         xmlns:cvt="clr-namespace:WpfApp1.converters"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
+        x:Name="addModal"
         Title="areaModel" Height="400" Width="332.4">
+
     <Window.Resources>
         <Style x:Key="cntere" TargetType="{x:Type Label}" >
             <Setter Property="VerticalAlignment" Value="center"/>
@@ -33,7 +33,7 @@
         <locm:AreaModel x:Key="m_area"/>
         <cvt:BooleanToVisibilityConverter x:Key="acvt"/>
     </Window.Resources>
-
+    
     <Grid Margin="5" >
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
@@ -60,9 +60,10 @@
                 Grid.Row="0"
                 Grid.Column="1"
                 Grid.ColumnSpan="3"
+                
                 >
-                <iconPacks:PackIconFontAwesome Name="ikona" Kind="PencilAltSolid"   />
-                <Run Text="Edit Data Area "  FontWeight="Bold" FontSize="17" />
+                <iconPacks:PackIconFontAwesome Name="ikona" Kind="PlusSolid"   />
+                <Run Text="Tambah Data Area "  FontWeight="Bold" FontSize="17" />
         </TextBlock>
         <StackPanel 
             VerticalAlignment="Center"
@@ -71,35 +72,35 @@
             Grid.Row="1" 
             Grid.Column="1" 
             x:Name="stAlert"
-            Background="{Binding Source={StaticResource vm_area}, Path=Coloring}"
-            Visibility="{Binding Source={StaticResource vm_area}, Path=Visibility, Converter={StaticResource acvt}}"
+            Background="{Binding Path=Coloring}"
+            Visibility="{Binding  Path=Visibility, Converter={StaticResource acvt}}"
             Grid.ColumnSpan="2" >
             <iconPacks:PackIconMaterialLight Foreground="White" Name="iconc" Kind="AlertCircle" Margin="10,0,0,0" VerticalAlignment="Center" />
-            <Label Margin="10,0,0,0" Foreground="White" Content="{Binding Source={StaticResource vm_area}, Path=Message }" VerticalAlignment="Center" />
+            <Label Margin="10,0,0,0" Foreground="White" Content="{Binding Path=Message }" VerticalAlignment="Center" />
         </StackPanel>
         <Label Content="Number " Style="{StaticResource cntere}" Grid.Row="2" Grid.Column="1" />
         <Label Content="Kategori " Style="{StaticResource cntere}" Grid.Row="4" Grid.Column="1"/>
         <Label Content="Salary" Style="{StaticResource cntere}" Grid.Row="6" Grid.Column="1"/>
-        
+
         <TextBox Grid.Row="2" 
                  Style="{StaticResource tcenter}" 
-                 Text="{Binding Source={StaticResource vm_area}, Path=Kategoris, Mode=OneWay}" 
+                 Text="{Binding Path=CurrentArea.AreaNumber,  TargetNullValue='', Mode=TwoWay}" 
                  x:Name="txtNum"
                  Grid.Column="2" />
         <ComboBox Grid.Row="4" 
                   ItemsSource="{Binding Source={StaticResource vm_area}, Path=Kategoris, Mode=OneWay}" 
                   DisplayMemberPath="KategoriHall"
                   SelectedValuePath="KategoriId"
+                  SelectedValue="{Binding Path=CurrentArea.KategoriId, Mode=TwoWay}"
                  
-                  SelectedValue="{Binding Source={StaticResource vm_area}, Path=CurrentArea.KategoriId, Mode=OneWay}"
                   Style="{StaticResource cbcenter}" 
                   Grid.Column="2" 
                   Name="cbKat"
                   />
         <ComboBox Grid.Row="6" 
                   Style="{StaticResource cbcenter}" 
-                  ItemsSource="{Binding Source={StaticResource vm_area}, Path=FeesModels, Mode=OneWay}" 
-                  SelectedValue="{Binding Source={StaticResource vm_area}, Path=CurrentArea.FessId, Mode=TwoWay}"
+                  ItemsSource="{Binding  Source={StaticResource vm_area},  Path=FeesModels, Mode=OneWay}" 
+                  SelectedValue="{Binding Path=CurrentArea.FessId, Mode=TwoWay}"
                  
                   DisplayMemberPath="FeesValue"
                   SelectedValuePath="ParkFeesId"
@@ -108,8 +109,8 @@
         <Label  Content="" Style="{StaticResource cntAlert }" Grid.Row="5" Grid.Column="2" />
         <Label  Content="" Style="{StaticResource cntAlert }" Grid.Row="7" Grid.Column="2" />
         <StackPanel Grid.Row="8" Grid.Column="2" Orientation="Horizontal"  >
-            <Button Content="Save" Height="30" Tag="stAlert" Width="70"  Command="{Binding Source={StaticResource vm_area}, Path=EditCommand}" CommandParameter="{Binding Source={StaticResource vm_area},Path=Areabyid.AreaId}" />
-            <Button Content="Cancel" Height="30" Width="70"  Margin="10,0,0,0" />
+            <Button Content="Save" Height="30" Tag="stAlert" Width="70" Command="{Binding SaveAreaCommand}" />
+            <Button Content="Cancel" Height="30" Width="70" Margin="10,0,0,0" />
         </StackPanel>
     </Grid>
 </Window>
