--- a/WpfApp1/views/AreaEditWindow.xaml
+++ b/WpfApp1/views/AreaEditWindow.xaml
@@ -1,19 +1,18 @@
-﻿<Window x:Class="WpfApp1.views.AreaAddModel"
+﻿<Window x:Class="WpfApp1.views.AreaEditWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:WpfApp1.views"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        xmlns:locvm="clr-namespace:WpfApp1.ViewModel"
+       
+         xmlns:locvm="clr-namespace:WpfApp1.ViewModel"
         xmlns:locm="clr-namespace:WpfApp1.Models"
-        DataContext="{Binding RelativeSource={RelativeSource Self}}"
         xmlns:cvt="clr-namespace:WpfApp1.converters"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
-        x:Name="addModal"
         Title="areaModel" Height="400" Width="332.4">
-
     <Window.Resources>
         <Style x:Key="cntere" TargetType="{x:Type Label}" >
             <Setter Property="VerticalAlignment" Value="center"/>
@@ -34,7 +33,7 @@
         <locm:AreaModel x:Key="m_area"/>
         <cvt:BooleanToVisibilityConverter x:Key="acvt"/>
     </Window.Resources>
-    
+
     <Grid Margin="5" >
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
@@ -61,10 +60,9 @@
                 Grid.Row="0"
                 Grid.Column="1"
                 Grid.ColumnSpan="3"
-                
                 >
-                <iconPacks:PackIconFontAwesome Name="ikona" Kind="PlusSolid"   />
-                <Run Text="Tambah Data Area "  FontWeight="Bold" FontSize="17" />
+                <iconPacks:PackIconFontAwesome Name="ikona" Kind="PencilAltSolid"   />
+                <Run Text="Edit Data Area "  FontWeight="Bold" FontSize="17" />
         </TextBlock>
         <StackPanel 
             VerticalAlignment="Center"
@@ -82,19 +80,17 @@
         <Label Content="Number " Style="{StaticResource cntere}" Grid.Row="2" Grid.Column="1" />
         <Label Content="Kategori " Style="{StaticResource cntere}" Grid.Row="4" Grid.Column="1"/>
         <Label Content="Salary" Style="{StaticResource cntere}" Grid.Row="6" Grid.Column="1"/>
-
+        
         <TextBox Grid.Row="2" 
                  Style="{StaticResource tcenter}" 
-                 Text="{Binding Source={StaticResource vm_area},Path=CurrentArea.AreaNumber,  TargetNullValue='', Mode=TwoWay}" 
+                 Text="{Binding Source={StaticResource vm_area}, Path=Areabyid.AreaId, Mode=TwoWay}" 
                  x:Name="txtNum"
                  Grid.Column="2" />
         <ComboBox Grid.Row="4" 
                   ItemsSource="{Binding Source={StaticResource vm_area}, Path=Kategoris, Mode=OneWay}" 
                   DisplayMemberPath="KategoriHall"
                   SelectedValuePath="KategoriId"
-                 
-                  SelectedValue="{Binding Source={StaticResource vm_area}, Path=CurrentArea.KategoriId, Mode=TwoWay}"
-                  
+                  SelectedValue="{Binding Source={StaticResource vm_area}, Path=Areabyid.KategoriId, Mode=TwoWay}"
                   Style="{StaticResource cbcenter}" 
                   Grid.Column="2" 
                   Name="cbKat"
@@ -102,7 +98,7 @@
         <ComboBox Grid.Row="6" 
                   Style="{StaticResource cbcenter}" 
                   ItemsSource="{Binding Source={StaticResource vm_area}, Path=FeesModels, Mode=OneWay}" 
-                  SelectedValue="{Binding Source={StaticResource vm_area}, Path=CurrentArea.FessId, Mode=TwoWay}"
+                  SelectedValue="{Binding Source={StaticResource vm_area}, Path=Areabyid.FessId, Mode=TwoWay}"
                   DisplayMemberPath="FeesValue"
                   SelectedValuePath="ParkFeesId"
                   Grid.Column="2" />
@@ -110,8 +106,8 @@
         <Label  Content="" Style="{StaticResource cntAlert }" Grid.Row="5" Grid.Column="2" />
         <Label  Content="" Style="{StaticResource cntAlert }" Grid.Row="7" Grid.Column="2" />
         <StackPanel Grid.Row="8" Grid.Column="2" Orientation="Horizontal"  >
-            <Button Content="Save" Height="30" Tag="stAlert" Width="70"  Command="{Binding Source={StaticResource vm_area}, Path=SaveCommand}" CommandParameter="{Binding ElementName=addModal}" />
-            <Button Content="Cancel" Height="30" Width="70" Click="Button_Click" Margin="10,0,0,0" />
+            <Button Content="Save" Height="30" Tag="stAlert" Width="70"  Command="{Binding Source={StaticResource vm_area}, Path=EditCommand}" CommandParameter="{Binding Source={StaticResource vm_area},Path=Areabyid.AreaId}" />
+            <Button Content="Cancel" Height="30" Width="70"  Margin="10,0,0,0" />
         </StackPanel>
     </Grid>
 </Window>
