--- a/WpfApp1/views/AreaAddWindow.xaml
+++ b/WpfApp1/views/AreaAddWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        xmlns:locvm="clr-namespace:WpfApp1.ViewModel"
+        xmlns:locvm="clr-namespace:WpfApp1.ViewModel.Area"
         xmlns:locm="clr-namespace:WpfApp1.Models"
         xmlns:cvt="clr-namespace:WpfApp1.converters"
         mc:Ignorable="d"
