--- a/WpfApp1/views/AreaEditWindow.xaml
+++ b/WpfApp1/views/AreaEditWindow.xaml
@@ -39,11 +39,11 @@
             <RowDefinition Height="50" />
             <RowDefinition Height="40" />
             <RowDefinition Height="30" />
-            <RowDefinition Height="25" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="25" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="25" />
+            <RowDefinition Height="5" />
+            <RowDefinition Height="60" />
+            <RowDefinition Height="5" />
+            <RowDefinition Height="60" />
+            <RowDefinition Height="5" />
             <RowDefinition Height="65" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
@@ -78,29 +78,39 @@
             <Label Margin="10,0,0,0" Foreground="White" Content="{Binding Source={StaticResource vm_area}, Path=Message }" VerticalAlignment="Center" />
         </StackPanel>
         <Label Content="Number " Style="{StaticResource cntere}" Grid.Row="2" Grid.Column="1" />
-        <Label Content="Kategori " Style="{StaticResource cntere}" Grid.Row="4" Grid.Column="1"/>
-        <Label Content="Salary" Style="{StaticResource cntere}" Grid.Row="6" Grid.Column="1"/>
+        <Label Content="Kategori " HorizontalAlignment="Left" Grid.Row="4" Grid.Column="1"/>
+        <Label Content="Salary" HorizontalAlignment="Left" Grid.Row="6" Grid.Column="1" HorizontalContentAlignment="Center"/>
         
         <TextBox Grid.Row="2" 
                  Style="{StaticResource tcenter}" 
                  Text="{Binding Path=AreaSelceted.AreaNumber, Mode=TwoWay}" 
                  x:Name="txtNum"
-                 Grid.Column="2" />
-        <ComboBox Grid.Row="4" 
+                 Grid.Column="2" 
+                 />
+        <StackPanel Grid.Row="4" Grid.Column="2" >
+            <Label Content="{Binding Path=KategoriHall, Mode=OneWay}" />
+            <ComboBox 
                   ItemsSource="{Binding Source={StaticResource vm_area}, Path=Kategoris, Mode=OneWay}" 
                   Style="{StaticResource cbcenter}" 
-                  Grid.Column="2" 
-                  Name="cbKat"
+                  DisplayMemberPath="KategoriHall"
+                  SelectedItem="{Binding Path=CurrentArea.Kategori, Mode=TwoWay}"
+                  SelectedValue="{Binding Path=CurrentArea.KategoriId, Mode=TwoWay}"
+                  Name="cbKat" 
                   />
-        <ComboBox Grid.Row="6" 
+        </StackPanel>
+       
+        <!--<Label Content="{Binding Path=AreaSelceted.ParkFeesValue, Mode=OneWay}" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2" Height="30" Margin="79.6,0,0.2,0" VerticalAlignment="Top" />-->
+        <StackPanel Grid.Row="6" Grid.Column="2"  >
+            <Label Content="{ Binding Path=ParkFeesValue, Mode=OneWay}" />
+            <ComboBox 
                   Style="{StaticResource cbcenter}" 
-                  ItemsSource="{Binding Source={StaticResource vm_area},Path=CollectionFees, Mode=OneWay}"
-                  
-                  Grid.Column="2"  />
+                  ItemsSource="{Binding Source={StaticResource vm_area},Path=FeesModels, Mode=OneWay}"
+                  SelectedItem="{Binding Path=CurrentArea.FeesValue, Mode=TwoWay}"
+                  DisplayMemberPath="FeesValue"
+                  SelectedValue="{Binding Path=CurrentArea.ParkFeesId, Mode=TwoWay}"
+                  />
+        </StackPanel>
 
-        <Label  Content="" Style="{StaticResource cntAlert }" Grid.Row="3" Grid.Column="2"  />
-        <Label  Content="" Style="{StaticResource cntAlert }" Grid.Row="5" Grid.Column="2" />
-        <Label  Content="" Style="{StaticResource cntAlert }" Grid.Row="7" Grid.Column="2" />
         <StackPanel Grid.Row="8" Grid.Column="2" Orientation="Horizontal"  >
             <Button Content="Save" Height="30" Tag="stAlert" Width="70"  Command="{Binding EditSaveCommand}" />
             <Button Content="Cancel" Height="30" Width="70"  Margin="10,0,0,0" />
